plugins {
	id 'java'
}

repositories {
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.runeversus.RuneVersusPluginTest'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
	testImplementation 'junit:junit:4.13.2'
}

group = 'com.runeversus'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
	options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea",
		"--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED",
		"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}

tasks.register('previewClanProgress', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.ClanProgressCardPreview'
}

tasks.register('previewDuelCard', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.DuelCardPreview'
}

tasks.register('previewClanPanel', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.ClanProgressPanelPreview'
}

tasks.register('previewVersusPanel', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.VersusComparisonPanelPreview'
}

tasks.register('previewMonthlyLeaguePanel', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.MonthlyLeaguePanelPreview'
}

tasks.register('previewMonthlyLeagueCard', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.MonthlyLeagueCardPreview'
}

tasks.register('releaseAssets', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.runeversus.ReleaseAssets'
}
